<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/Launch_history_limit" >
        <EditTextPreference
            android:key="launcHistoryLimit"
            android:summary="@string/max_num_records_summary"
            android:title="@string/max_num_records" 
            android:dialogMessage="@string/max_num_records_dialog_message"
            android:defaultValue="@string/max_num_records_default_value"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/Monitoring_setting" >
        <ListPreference
            android:entries="@array/refreshFrequency"
            android:entryValues="@array/refreshFrequencyValues"
            android:key="runStateRefreshFrequency"
            android:summary="@string/run_refresh_rate_setting_summary"
            android:title="@string/run_refresh_rate_setting" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/Run_Lists_mode_setting" >
        <CheckBoxPreference
            android:key="liveRunListSetting"
            android:summary="@string/Run_Lists_mode_setting_summary"
            android:title="@string/Live_run_list_mode_setting" />
    </PreferenceCategory>

</PreferenceScreen>