<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/myexperiment_logo"
        android:text="@string/myExperiment_login_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/AliceBlue"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/myeloginUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/LoginUserNameText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/AliceBlue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/myeloginUsernameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/myeloginPasswordValue"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/myeloginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/LoginPassWordText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/AliceBlue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/myeloginPasswordValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/myeloginButton"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/myeloginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/LoginButtonLabel" />

        <Button
            android:id="@+id/myeloginBackButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/BackButtonLabel" />
    </LinearLayout>

</LinearLayout>