<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:gravity="top|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/monitorWfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Runing (workflow)"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/monitorUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:text="@string/MonitorScreen_Username"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/monitorUsernameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/MonitorScreen_DefaultMessage"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/monitorCurrentState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:text="@string/MonitorScreen_CurrentState"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/monitorCurrentStateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/MonitorScreen_DefaultMessage"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/monitorStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:text="@string/MonitorScreen_StartTime"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/monitorStartTimeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Reading data..."
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/runProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/runEndStatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/monitorEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/MonitorScreen_EndTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/monitorEndTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="End Time"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/monitorRunningTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/MonitorScreen_RunningTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/monitorRunningTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Running Time"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/cancelRunButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Cancel Run" />

    <Button
        android:id="@+id/runMonitorOutputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="View Output"
        android:visibility="gone" />

</LinearLayout>